pkg/generated/knot_parser.go
// Code generated from Knot.g4 by ANTLR 4.8. DO NOT EDIT.

package generated // Knot
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'{'", "'}'", "'at changes'", "'each '", "'s'", "'greater than '",
	"'lower than '", "'bool'", "'('", "')'", "'sends'", "'int'", "'float'",
	"'bytes'", "'voltage in '", "'V'", "'mV'", "'kV'", "'current in '", "'A'",
	"'mA'", "'resistance in '", "'ohm'", "'power in '", "'W'", "'kW'", "'MW'",
	"'temperature in '", "'F'", "'C'", "'K'", "'luminosity in '", "'lm'", "'cd'",
	"'lx'", "'time in '", "'ms'", "'us'", "'min'", "'h'", "'mass in '", "'g'",
	"'kg'", "'lb'", "'oz'", "'pressure in '", "'Pa'", "'psi'", "'bar'", "'distance in '",
	"'m'", "'cm'", "'mi'", "'in'", "'angle in '", "'degree'", "'rad'", "'volume in '",
	"'l'", "'gal'", "'ml'", "'floz'", "'area in '", "'m2'", "'ha'", "'ac'",
	"'mm'", "'rain in '", "'density in '", "'kgm3'", "'latitude in '", "'longitude in '",
	"'speed in '", "'cms'", "'kms'", "'mih'", "'volumeflow in '", "'m3s'",
	"'scmm'", "'ls'", "'ft3s'", "'galm'", "'energy in '", "'J'", "'nm'", "'Wh'",
	"'KWh'", "'cal'", "'Kcal'", "'thing'", "'sensor'", "'actuator'", "';'",
	"", "", "", "'relativehumidity'", "'switch'", "'presence'", "'command'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"THING", "SENSOR", "ACTUATOR", "END_CHAR", "WS", "COMMENT", "LINE_COMMENT",
	"RELATIVEHUMIDITY", "SWITCH", "PRESENCE", "COMMAND", "IDENTIFIER", "UNSIGNED_INTEGER",
	"NUMBER",
}

var ruleNames = []string{
	"start", "definition", "thingContent", "config", "configChanges", "configTime",
	"configUpper", "configLower", "valueOptions", "boolOpt", "numberOpt", "bytesOpt",
	"unitTypeOptions", "logicUnits", "voltage", "voltagesUnits", "current",
	"currentUnits", "resistance", "resistanceUnits", "power", "powerUnits",
	"temperature", "temperatureUnits", "luminosity", "luminosityUnits", "time",
	"timeUnits", "mass", "massUnits", "pressure", "pressureUnits", "distance",
	"distanceUnits", "angle", "angleUnits", "volume", "volumeUnits", "area",
	"areaUnits", "rain", "rainUnits", "density", "densityUnits", "latitude",
	"latitudeUnits", "longitude", "longitudeUnits", "speed", "speedUnits",
	"volumeflow", "volumeflowUnits", "energy", "energyUnits",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type KnotParser struct {
	*antlr.BaseParser
}

func NewKnotParser(input antlr.TokenStream) *KnotParser {
	this := new(KnotParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Knot.g4"

	return this
}

// KnotParser tokens.
const (
	KnotParserEOF              = antlr.TokenEOF
	KnotParserT__0             = 1
	KnotParserT__1             = 2
	KnotParserT__2             = 3
	KnotParserT__3             = 4
	KnotParserT__4             = 5
	KnotParserT__5             = 6
	KnotParserT__6             = 7
	KnotParserT__7             = 8
	KnotParserT__8             = 9
	KnotParserT__9             = 10
	KnotParserT__10            = 11
	KnotParserT__11            = 12
	KnotParserT__12            = 13
	KnotParserT__13            = 14
	KnotParserT__14            = 15
	KnotParserT__15            = 16
	KnotParserT__16            = 17
	KnotParserT__17            = 18
	KnotParserT__18            = 19
	KnotParserT__19            = 20
	KnotParserT__20            = 21
	KnotParserT__21            = 22
	KnotParserT__22            = 23
	KnotParserT__23            = 24
	KnotParserT__24            = 25
	KnotParserT__25            = 26
	KnotParserT__26            = 27
	KnotParserT__27            = 28
	KnotParserT__28            = 29
	KnotParserT__29            = 30
	KnotParserT__30            = 31
	KnotParserT__31            = 32
	KnotParserT__32            = 33
	KnotParserT__33            = 34
	KnotParserT__34            = 35
	KnotParserT__35            = 36
	KnotParserT__36            = 37
	KnotParserT__37            = 38
	KnotParserT__38            = 39
	KnotParserT__39            = 40
	KnotParserT__40            = 41
	KnotParserT__41            = 42
	KnotParserT__42            = 43
	KnotParserT__43            = 44
	KnotParserT__44            = 45
	KnotParserT__45            = 46
	KnotParserT__46            = 47
	KnotParserT__47            = 48
	KnotParserT__48            = 49
	KnotParserT__49            = 50
	KnotParserT__50            = 51
	KnotParserT__51            = 52
	KnotParserT__52            = 53
	KnotParserT__53            = 54
	KnotParserT__54            = 55
	KnotParserT__55            = 56
	KnotParserT__56            = 57
	KnotParserT__57            = 58
	KnotParserT__58            = 59
	KnotParserT__59            = 60
	KnotParserT__60            = 61
	KnotParserT__61            = 62
	KnotParserT__62            = 63
	KnotParserT__63            = 64
	KnotParserT__64            = 65
	KnotParserT__65            = 66
	KnotParserT__66            = 67
	KnotParserT__67            = 68
	KnotParserT__68            = 69
	KnotParserT__69            = 70
	KnotParserT__70            = 71
	KnotParserT__71            = 72
	KnotParserT__72            = 73
	KnotParserT__73            = 74
	KnotParserT__74            = 75
	KnotParserT__75            = 76
	KnotParserT__76            = 77
	KnotParserT__77            = 78
	KnotParserT__78            = 79
	KnotParserT__79            = 80
	KnotParserT__80            = 81
	KnotParserT__81            = 82
	KnotParserT__82            = 83
	KnotParserT__83            = 84
	KnotParserT__84            = 85
	KnotParserT__85            = 86
	KnotParserT__86            = 87
	KnotParserT__87            = 88
	KnotParserT__88            = 89
	KnotParserTHING            = 90
	KnotParserSENSOR           = 91
	KnotParserACTUATOR         = 92
	KnotParserEND_CHAR         = 93
	KnotParserWS               = 94
	KnotParserCOMMENT          = 95
	KnotParserLINE_COMMENT     = 96
	KnotParserRELATIVEHUMIDITY = 97
	KnotParserSWITCH           = 98
	KnotParserPRESENCE         = 99
	KnotParserCOMMAND          = 100
	KnotParserIDENTIFIER       = 101
	KnotParserUNSIGNED_INTEGER = 102
	KnotParserNUMBER           = 103
)

// KnotParser rules.
const (
	KnotParserRULE_start            = 0
	KnotParserRULE_definition       = 1
	KnotParserRULE_thingContent     = 2
	KnotParserRULE_config           = 3
	KnotParserRULE_configChanges    = 4
	KnotParserRULE_configTime       = 5
	KnotParserRULE_configUpper      = 6
	KnotParserRULE_configLower      = 7
	KnotParserRULE_valueOptions     = 8
	KnotParserRULE_boolOpt          = 9
	KnotParserRULE_numberOpt        = 10
	KnotParserRULE_bytesOpt         = 11
	KnotParserRULE_unitTypeOptions  = 12
	KnotParserRULE_logicUnits       = 13
	KnotParserRULE_voltage          = 14
	KnotParserRULE_voltagesUnits    = 15
	KnotParserRULE_current          = 16
	KnotParserRULE_currentUnits     = 17
	KnotParserRULE_resistance       = 18
	KnotParserRULE_resistanceUnits  = 19
	KnotParserRULE_power            = 20
	KnotParserRULE_powerUnits       = 21
	KnotParserRULE_temperature      = 22
	KnotParserRULE_temperatureUnits = 23
	KnotParserRULE_luminosity       = 24
	KnotParserRULE_luminosityUnits  = 25
	KnotParserRULE_time             = 26
	KnotParserRULE_timeUnits        = 27
	KnotParserRULE_mass             = 28
	KnotParserRULE_massUnits        = 29
	KnotParserRULE_pressure         = 30
	KnotParserRULE_pressureUnits    = 31
	KnotParserRULE_distance         = 32
	KnotParserRULE_distanceUnits    = 33
	KnotParserRULE_angle            = 34
	KnotParserRULE_angleUnits       = 35
	KnotParserRULE_volume           = 36
	KnotParserRULE_volumeUnits      = 37
	KnotParserRULE_area             = 38
	KnotParserRULE_areaUnits        = 39
	KnotParserRULE_rain             = 40
	KnotParserRULE_rainUnits        = 41
	KnotParserRULE_density          = 42
	KnotParserRULE_densityUnits     = 43
	KnotParserRULE_latitude         = 44
	KnotParserRULE_latitudeUnits    = 45
	KnotParserRULE_longitude        = 46
	KnotParserRULE_longitudeUnits   = 47
	KnotParserRULE_speed            = 48
	KnotParserRULE_speedUnits       = 49
	KnotParserRULE_volumeflow       = 50
	KnotParserRULE_volumeflowUnits  = 51
	KnotParserRULE_energy           = 52
	KnotParserRULE_energyUnits      = 53
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_definition returns the _definition rule contexts.
	Get_definition() IDefinitionContext

	// Set_definition sets the _definition rule contexts.
	Set_definition(IDefinitionContext)

	// GetThings returns the things rule context list.
	GetThings() []IDefinitionContext

	// SetThings sets the things rule context list.
	SetThings([]IDefinitionContext)

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser      antlr.Parser
	_definition IDefinitionContext
	things      []IDefinitionContext
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnotParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnotParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Get_definition() IDefinitionContext { return s._definition }

func (s *StartContext) Set_definition(v IDefinitionContext) { s._definition = v }

func (s *StartContext) GetThings() []IDefinitionContext { return s.things }

func (s *StartContext) SetThings(v []IDefinitionContext) { s.things = v }

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(KnotParserEOF, 0)
}

func (s *StartContext) AllDefinition() []IDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDefinitionContext)(nil)).Elem())
	var tst = make([]IDefinitionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDefinitionContext)
		}
	}

	return tst
}

func (s *StartContext) Definition(i int) IDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefinitionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDefinitionContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.ExitStart(s)
	}
}

func (s *StartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KnotVisitor:
		return t.VisitStart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KnotParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, KnotParserRULE_start)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(109)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == KnotParserTHING {
		{
			p.SetState(108)

			var _x = p.Definition()

			localctx.(*StartContext)._definition = _x
		}
		localctx.(*StartContext).things = append(localctx.(*StartContext).things, localctx.(*StartContext)._definition)

		p.SetState(111)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(113)
		p.Match(KnotParserEOF)
	}

	return localctx
}

// IDefinitionContext is an interface to support dynamic dispatch.
type IDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_thingContent returns the _thingContent rule contexts.
	Get_thingContent() IThingContentContext

	// Set_thingContent sets the _thingContent rule contexts.
	Set_thingContent(IThingContentContext)

	// GetSensors returns the sensors rule context list.
	GetSensors() []IThingContentContext

	// SetSensors sets the sensors rule context list.
	SetSensors([]IThingContentContext)

	// IsDefinitionContext differentiates from other interfaces.
	IsDefinitionContext()
}

type DefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser        antlr.Parser
	_thingContent IThingContentContext
	sensors       []IThingContentContext
}

func NewEmptyDefinitionContext() *DefinitionContext {
	var p = new(DefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnotParserRULE_definition
	return p
}

func (*DefinitionContext) IsDefinitionContext() {}

func NewDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionContext {
	var p = new(DefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnotParserRULE_definition

	return p
}

func (s *DefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionContext) Get_thingContent() IThingContentContext { return s._thingContent }

func (s *DefinitionContext) Set_thingContent(v IThingContentContext) { s._thingContent = v }

func (s *DefinitionContext) GetSensors() []IThingContentContext { return s.sensors }

func (s *DefinitionContext) SetSensors(v []IThingContentContext) { s.sensors = v }

func (s *DefinitionContext) THING() antlr.TerminalNode {
	return s.GetToken(KnotParserTHING, 0)
}

func (s *DefinitionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(KnotParserIDENTIFIER, 0)
}

func (s *DefinitionContext) AllThingContent() []IThingContentContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IThingContentContext)(nil)).Elem())
	var tst = make([]IThingContentContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IThingContentContext)
		}
	}

	return tst
}

func (s *DefinitionContext) ThingContent(i int) IThingContentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IThingContentContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IThingContentContext)
}

func (s *DefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.EnterDefinition(s)
	}
}

func (s *DefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.ExitDefinition(s)
	}
}

func (s *DefinitionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KnotVisitor:
		return t.VisitDefinition(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KnotParser) Definition() (localctx IDefinitionContext) {
	localctx = NewDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, KnotParserRULE_definition)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(115)
		p.Match(KnotParserTHING)
	}
	{
		p.SetState(116)
		p.Match(KnotParserIDENTIFIER)
	}
	{
		p.SetState(117)
		p.Match(KnotParserT__0)
	}
	p.SetState(119)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == KnotParserSENSOR || _la == KnotParserACTUATOR {
		{
			p.SetState(118)

			var _x = p.ThingContent()

			localctx.(*DefinitionContext)._thingContent = _x
		}
		localctx.(*DefinitionContext).sensors = append(localctx.(*DefinitionContext).sensors, localctx.(*DefinitionContext)._thingContent)

		p.SetState(121)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(123)
		p.Match(KnotParserT__1)
	}

	return localctx
}

// IThingContentContext is an interface to support dynamic dispatch.
type IThingContentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetOp returns the op token.
	GetOp() antlr.Token

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// IsThingContentContext differentiates from other interfaces.
	IsThingContentContext()
}

type ThingContentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	op     antlr.Token
}

func NewEmptyThingContentContext() *ThingContentContext {
	var p = new(ThingContentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnotParserRULE_thingContent
	return p
}

func (*ThingContentContext) IsThingContentContext() {}

func NewThingContentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ThingContentContext {
	var p = new(ThingContentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnotParserRULE_thingContent

	return p
}

func (s *ThingContentContext) GetParser() antlr.Parser { return s.parser }

func (s *ThingContentContext) GetOp() antlr.Token { return s.op }

func (s *ThingContentContext) SetOp(v antlr.Token) { s.op = v }

func (s *ThingContentContext) ValueOptions() IValueOptionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IValueOptionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IValueOptionsContext)
}

func (s *ThingContentContext) SENSOR() antlr.TerminalNode {
	return s.GetToken(KnotParserSENSOR, 0)
}

func (s *ThingContentContext) ACTUATOR() antlr.TerminalNode {
	return s.GetToken(KnotParserACTUATOR, 0)
}

func (s *ThingContentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ThingContentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ThingContentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.EnterThingContent(s)
	}
}

func (s *ThingContentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.ExitThingContent(s)
	}
}

func (s *ThingContentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KnotVisitor:
		return t.VisitThingContent(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KnotParser) ThingContent() (localctx IThingContentContext) {
	localctx = NewThingContentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, KnotParserRULE_thingContent)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(125)

		var _lt = p.GetTokenStream().LT(1)

		localctx.(*ThingContentContext).op = _lt

		_la = p.GetTokenStream().LA(1)

		if !(_la == KnotParserSENSOR || _la == KnotParserACTUATOR) {
			var _ri = p.GetErrorHandler().RecoverInline(p)

			localctx.(*ThingContentContext).op = _ri
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(126)
		p.ValueOptions()
	}

	return localctx
}

// IConfigContext is an interface to support dynamic dispatch.
type IConfigContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConfigContext differentiates from other interfaces.
	IsConfigContext()
}

type ConfigContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConfigContext() *ConfigContext {
	var p = new(ConfigContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnotParserRULE_config
	return p
}

func (*ConfigContext) IsConfigContext() {}

func NewConfigContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConfigContext {
	var p = new(ConfigContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnotParserRULE_config

	return p
}

func (s *ConfigContext) GetParser() antlr.Parser { return s.parser }

func (s *ConfigContext) ConfigChanges() IConfigChangesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConfigChangesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConfigChangesContext)
}

func (s *ConfigContext) ConfigTime() IConfigTimeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConfigTimeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConfigTimeContext)
}

func (s *ConfigContext) ConfigUpper() IConfigUpperContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConfigUpperContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConfigUpperContext)
}

func (s *ConfigContext) ConfigLower() IConfigLowerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConfigLowerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConfigLowerContext)
}

func (s *ConfigContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConfigContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConfigContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.EnterConfig(s)
	}
}

func (s *ConfigContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.ExitConfig(s)
	}
}

func (s *ConfigContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KnotVisitor:
		return t.VisitConfig(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KnotParser) Config() (localctx IConfigContext) {
	localctx = NewConfigContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, KnotParserRULE_config)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(129)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == KnotParserT__2 {
		{
			p.SetState(128)
			p.ConfigChanges()
		}

	}
	p.SetState(132)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == KnotParserT__3 {
		{
			p.SetState(131)
			p.ConfigTime()
		}

	}
	p.SetState(135)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == KnotParserT__5 {
		{
			p.SetState(134)
			p.ConfigUpper()
		}

	}
	p.SetState(138)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == KnotParserT__6 {
		{
			p.SetState(137)
			p.ConfigLower()
		}

	}

	return localctx
}

// IConfigChangesContext is an interface to support dynamic dispatch.
type IConfigChangesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConfigChangesContext differentiates from other interfaces.
	IsConfigChangesContext()
}

type ConfigChangesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConfigChangesContext() *ConfigChangesContext {
	var p = new(ConfigChangesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnotParserRULE_configChanges
	return p
}

func (*ConfigChangesContext) IsConfigChangesContext() {}

func NewConfigChangesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConfigChangesContext {
	var p = new(ConfigChangesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnotParserRULE_configChanges

	return p
}

func (s *ConfigChangesContext) GetParser() antlr.Parser { return s.parser }
func (s *ConfigChangesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConfigChangesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConfigChangesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnotListener); ok {
		listenerT.EnterConfigChanges(s)
	}
}
